[package]
name = "backtalk"
version = "0.1.0"
authors = ["Robert Lord <hello@lord.io>"]

[dependencies]
futures = "0.1.11"
tokio-core = "0.1.6"
serde_json = "0.9.8"
queryst = { git = "https://github.com/lord/queryst" }
hyper = { git = "https://github.com/hyperium/hyper", rev = "e3834457da7dc74f466aad63b50398bea6f6eec5" }
uuid = { version = "0.4", features = ["v4"] }
