[package]
name = "backtalk"
version = "0.1.0"
authors = ["Robert Lord <hello@lord.io>"]
repository = "https://github.com/lord/backtalk"
documentation = "https://docs.rs/backtalk"
readme = "readme.md"

[dependencies]
futures = "0.1.11"
tokio-core = "0.1.6"
serde_json = "0.9.8"
queryst-prime = "2.0.0"
hyper = "0.11"
uuid = { version = "0.4", features = ["v4"] }
