[package]
name = "backtalk"
version = "0.1.0"
authors = ["Robert Lord <hello@lord.io>"]
description = "An asynchronous, streaming web server for JSON APIs"
repository = "https://github.com/lord/backtalk"
documentation = "https://docs.rs/backtalk"
readme = "readme.md"
license = "MIT/Apache-2.0"
keywords = ["async", "web", "server", "framework"]

[dependencies]
futures = "0.1.11"
tokio-core = "0.1.6"
serde_json = "0.9.8"
queryst-prime = "2.0.0"
hyper = "0.11"
uuid = { version = "0.4", features = ["v4"] }
